# LearnOpenGL

./: .gitignore  CMakeLists.txt  OpenGLWindow.sln  build.bat  build.sh  main.cpp
OpenGLWindow/: .gitignore  OpenGLWindow.vcxproj  OpenGLWindow.vcxproj.filters  core.cpp  glad.c  main.cpp  shapes.h
include/: core.hpp  engine.hpp  graphics.hpp  input.hpp  models.hpp  shader.hpp  textures.hpp
lib/GLAD/: glad.c
lib/GLAD/include/glad/: glad.h
res/shaders/: fragment.fs  vertex.vs
src/: core.cpp  engine.cpp  graphics.cpp  input.cpp  main.cpp  models.cpp  shader.cpp  textures.cpp
src/shaders/: fragment.fs  vertex.vs
